feat: crud books
